--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.39.0
-openai==1.51.2
-pypdf==4.3.1
+streamlit>=1.37,<1.41
+openai>=1.50,<1.60
+pypdf>=4.2,<5
 langdetect==1.0.9
-numpy==1.26.4
-tiktoken==0.7.0
-# faiss-cpu (optional, local only)
+numpy<2
+# tiktoken/faiss omitted to avoid build issues
